[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["Ernie Francis <devin_98@msn.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
